# rust-websockets-using-actix

./: Cargo.toml  README.md  prompts-to-Gemini-and-its-replies.md
src/: actors.rs  handlers.rs  main.rs  models.rs
static/: chat.html  chat.js  index.html
