[package]
name = "actix-websockets"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = "4"
actix-web-actors = "4.1" # Provides ws actors support
actix-files = "0.6" # For serving static files
actix-ws = "0.2"  # Separate crate for newer actix-web ws handling

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] } # For ws stream

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# State Management
dashmap = "5" # Concurrent HashMap, simpler than Arc<Mutex<HashMap>> for this example
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
